--- a/en/revenue-agency/services/e-services/cra-login-services.html
+++ b/en/revenue-agency/services/e-services/cra-login-services.html
@@ -169,6 +169,7 @@
 			   <h3><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html">Registering for an account</a></h3>
                        <p class="mrgn-bttm-lg">Create a CRA account if you don't have one</p>
                     </div>
+	  </div>
   <!--  <section class="py-4 mrgn-lft-md mrgn-rght-md">
 	    <h3 class="mrgn-tp-0"><a href="/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">My Account</a></h3>
 	    <div class="row">
