--- a/en/revenue-agency/services/update-information.html
+++ b/en/revenue-agency/services/update-information.html
@@ -55,8 +55,8 @@
   
   <div class="wb-eqht row">
     <div class="col-lg-4 col-md-6"> 
-      <!--  <h3><a href="https://test.canada.ca/cra-arc/jmlt333/update-info/change-address-phone.html">[Change your address <mark>or phone number</mark>]]</a></h3> -->
-      <h3><a href="https://test.canada.ca/cra-arc/jmlt333/update-info/index-alt.html">Personal updates</a></h3>
+      <!--  <h3><a href="/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html">[Change your address <mark>or phone number</mark>]]</a></h3> -->
+      <h3><a href="/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html">Personal updates</a></h3>
       <p>Change your address, phone number, email, marital status, or name</p>
     </div>
     <div class="col-lg-4 col-md-6">
