--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/business-change-address.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/business-change-address.html
@@ -48,7 +48,7 @@
            },
 {
              title: "Update your information with the CRA",
-             href: "https://test.canada.ca/cra-arc/jmlt333/update-info/index-alt.html"
+             href: "/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html"
            }
          ],
            search: true,
@@ -221,7 +221,7 @@
        </ul>
 		<!--    <h3>Update your other personal information</h3>
 	
-  <p>You may also need to change your phone number, email address, or other details with the CRA. To update more of your personal information, go to: <a href="https://test.canada.ca/cra-arc/jmlt333/update-info/index-alt.html">Update your information with the CRA</a></p>
+  <p>You may also need to change your phone number, email address, or other details with the CRA. To update more of your personal information, go to: <a href="/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html">Update your information with the CRA</a></p>
 <h3>If you have moved</h3>
 	   <p>You may be eligible to claim some of your moving expenses. Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-21900-moving-expenses.html">Moving expenses</a></p>
 
