--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/change-marital-status.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/change-marital-status.html
@@ -52,10 +52,10 @@
            },
 {
              title: "Update your information with the CRA",
-             href: "https://test.canada.ca/cra-arc/jmlt333/update-info/first-level-index.html"
+             href: "/sign-in-test/en/revenue-agency/services/update-information.html"
            },{
 			  title: "Update your personal information with the CRA",
-             href: "https://test.canada.ca/cra-arc/jmlt333/update-info/index-alt.html"
+             href: "/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html"
            }
          ],
            search: true,
@@ -366,7 +366,7 @@
 <p><a href="https://www.canada.ca/en/contact.html">Contact another Government of Canada department or agency</a></p>
  <h2>Update other information</h2>
 	   <p>Change your other personal details with the CRA, including your address, phone number or email address.</p>
-	   <p><a href="https://test.canada.ca/cra-arc/jmlt333/update-info/index-alt.html">Update your personal information with the CRA</a></p>
+	   <p><a href="/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html">Update your personal information with the CRA</a></p>
 
 	   
 <!-- <div class="mwspanel section">
