--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-individuals.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-individuals.html
@@ -503,7 +503,7 @@
  <h2>Update other information</h2>
 	 
 	   <p>Change your other personal details with the CRA, including your address, phone number or email address.</p>
-	   <p><a href="https://test.canada.ca/cra-arc/jmlt333/update-info/index-alt.html">Update your personal information with the CRA</a></p>
+	   <p><a href="/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html">Update your personal information with the CRA</a></p>
 
 	   
  
