--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-name.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-name.html
@@ -52,10 +52,10 @@
            },
 {
              title: "Update your information with the CRA",
-             href: "https://test.canada.ca/cra-arc/jmlt333/update-info/first-level-index.html"
+             href: "/sign-in-test/en/revenue-agency/services/update-information.html"
            },{
 			  title: "Update your personal information with the CRA",
-             href: "https://test.canada.ca/cra-arc/jmlt333/update-info/index-alt.html"
+             href: "/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html"
            }
          ],
            search: true,
@@ -496,7 +496,7 @@
 	 <h2 id="section4">Update other information</h2>
 	
 	   <p>Change your other personal details with the CRA, including your address, phone number or email address.</p> 
-	   <p><a href="https://test.canada.ca/cra-arc/jmlt333/update-info/index-alt.html">Update your personal information with the CRA</a></p>
+	   <p><a href="/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html">Update your personal information with the CRA</a></p>
 
 	<!--   <h2>Change your name with other government departments</h2>   
 	     <p>The CRA will not share your name change with other government departments. You must do this separately. The only exception to this is if you allowed CRA to share this information with Elections Canada on your tax return.</p> 
