--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-phone.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-phone.html
@@ -52,10 +52,10 @@
            },
 {
              title: "Update your information with the CRA",
-             href: "https://test.canada.ca/cra-arc/jmlt333/update-info/first-level-index.html"
+             href: "/sign-in-test/en/revenue-agency/services/update-information.html"
            },{
 			  title: "Update your personal information with the CRA",
-             href: "https://test.canada.ca/cra-arc/jmlt333/update-info/index-alt.html"
+             href: "/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html"
            }
          ],
            search: true,
@@ -327,7 +327,7 @@
 	   <h2>Update other information</h2>
 	 <!--  <h3>After you change your address</h3> -->
 	   <p>Change your other personal details with the CRA, including your home or mailing address or email address.</p>
-	   <p><a href="https://test.canada.ca/cra-arc/jmlt333/update-info/index-alt.html">Update your personal information with the CRA</a></p>
+	   <p><a href="/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html">Update your personal information with the CRA</a></p>
 
 	  
 
