--- a/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html
@@ -210,7 +210,7 @@
           <div class="mrgn-tp-md mrgn-lft-sm mrgn-rght-sm row wb-eqht-grd">
             <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
-                <h3 class="h4 mrgn-tp-0"><a href="https://test.canada.ca/cra-arc/jmlt333/update-info/index-alt.html" class="stretched-link">My Account: Update information</a></h3>
+                <h3 class="h4 mrgn-tp-0"><a href="/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html" class="stretched-link">My Account: Update information</a></h3>
               <!--  <p>Change your phone number, address, email address, or marital status</p> -->
 		      <p>Change your address, phone number, direct deposit and other personal information</p>
               </div>
